--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -1,3 +1,12 @@
+@software{antonovSnskorpion2DezibotLabyrinthSolver2025,
+  title = {Snskorpion2/Dezibot-{{LabyrinthSolver}}},
+  author = {Antonov, Vladislav and Mager, Max},
+  date = {2025-02-07T09:55:02Z},
+  origdate = {2024-11-04T15:15:34Z},
+  url = {https://github.com/snskorpion2/dezibot-LabyrinthSolver},
+  urldate = {2025-03-16}
+}
+
 @standard{bluetoothsigincBluetoothCoreSpecification2019,
   title = {Bluetooth {{Core Specification}} v5.1},
   author = {{Bluetooth SIG, Inc}},
